# cpp-magic-ascii-art-cpp-nionys

./: .gitignore  CMakeLists.txt
cpp-magic-ascii-art-starter-main/: PixelArray.cpp  PixelArray.h  main.cpp
cpp-magic-ascii-art-starter-main/ImageReader/: ImageReader.cpp  ImageReader.h
cpp-magic-ascii-art-starter-main/ImageReader/BmpImageReader/: BmpImageReader.cpp  BmpImageReader.h
cpp-magic-ascii-art-starter-main/ImageReader/PngImageReader/: PngImageReader.cpp  PngImageReader.h
cpp-magic-ascii-art-starter-main/src/: Color.h  Grayscale.cpp  Grayscale.h  PixelArray.h  main.cpp
cpp-magic-ascii-art-starter-main/src/ImageReader/: IImageReader.h  ImageReader.h
cpp-magic-ascii-art-starter-main/src/ImageReader/BmpImageReader/: BmpImageReader.cpp  BmpImageReader.h
cpp-magic-ascii-art-starter-main/src/ImageReader/JpegReader/: JpegReader.cpp  JpegReader.h
cpp-magic-ascii-art-starter-main/src/ImageReader/PngImageReader/: PngImageReader.cpp  PngImageReader.h
cpp-magic-ascii-art-starter-main/src/pipeline/: AsciiArtifier.cpp  AsciiArtifier.h  Grayscale.cpp  Grayscale.h  ImageConverter.cpp  ImageConverter.h
cpp-magic-ascii-art-starter-main/src/util/: fileUtil.h  parseUtil.h
